# django-hatchway

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: test.yml
hatchway/: __init__.py  apps.py  constants.py  types.py  view.py
tests/: test_types.py  test_view.py
tests/test_project/: settings.py
